--- a/css/3Dobj.css
+++ b/css/3Dobj.css
@@ -1,4 +1,16 @@
 * {
    margin: 0;
    padding: 0;
+   font-family: monospace;
+   font-size: 110%;
+}
+
+canvas {
+	position:fixed;
+}
+
+div {
+	margin:5px;
+	padding:5px;
+	
 }
