Updated Math acceptable versione

--- a/css/math.css
+++ b/css/math.css
@@ -41,3 +41,7 @@ input:hover{
 #myContainer canvas{
 	border: 1px solid #dc3545;
 }
+
+.settings{
+	position: absolute; left: 25px; background-color:white; border: 1px solid red; padding: 10px;
+}
