--- a/css/math.css
+++ b/css/math.css
@@ -71,3 +71,20 @@ input:hover{
 #settings {	
 	position: absolute; left: 10px; background-color:white; border: 1px solid red; padding: 5px; width: 5ex; height: 5ex; text-align:center;
 }
+
+#loading{
+	background-color: rgba(255,255,255,.8);
+	position: absolute;
+	top: 0%;
+	left: 0%;
+	width: 100%;
+	height: 500%;
+	z-index: 100;
+	text-align: center;
+	font-size: 400%;
+	font-family: consolas;
+}
+
+#loading img{
+	border: 5px solid black;
+}
