--- a/FramesJS/style.css
+++ b/FramesJS/style.css
@@ -16,7 +16,7 @@
 
 .sep{
 	border: 0;
-	margin: 2.5ex;
+	padding: 1ex;
 }
 
 .templateArea{
@@ -90,10 +90,21 @@
 	transition: 0.2s;
 	margin-left: 2ex;
 }
- a{
+a{
+	color: black;
+	text-decoration: none;
+}
+
+.link{
 	font-weight: bold;
 	color: black;
 	text-decoration: none;
+	border-bottom: 1px solid rgba(255,0,0,0.2);
+	transition: 0.05s;
+}
+.link:hover{
+	color: #c00;
+	transition: 0.1s;
 }
 
 .red {
@@ -101,10 +112,17 @@
 }
 
 .red-soft {
-	 color: rgba(25,0,0,0.3);
+	 color: rgba(128,0,0,1);
 }
 
 .unimportant {
+	color: #211;
+	font-weight: auto;
 	padding: 1ex;
-	color: rgba(0,0,0,0.5);
+}
+
+.important {
+	padding: 1ex;
+	display: inline-block;
+	border-bottom: 1px solid rgba(255,0,0,0.7);
 }
